[package]
name = "client_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = "1.45.1"
tokio-tungstenite = "0.27.0"
url = { version = "2.5.4", features = ["std", "serde"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tracing = "0.1.41"
async-stream = "0.3.6"
once_cell = "1.21.3"
toml = "0.8.23"
reqwest = { version = "0.12.20", features = ["json"] }
shared_lib = { path = "../shared_lib" }

