[package]
name = "nultr-client-lib"
version = "0.1.0"
edition = "2024"
authors = ["sterrlia <dev@sterrlia.com>"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
futures = "0.3.31"
tokio = "1.45.1"
tokio-tungstenite = "0.27.0"
url = { version = "2.5.4", features = ["std", "serde"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tracing = "0.1.41"
once_cell = "1.21.3"
toml = "0.8.23"
reqwest = { version = "0.12.20", features = ["json"] }
nultr-shared-lib = { path = "../shared-lib" }
rust-api-kit = { path = "../rust-api-kit", features = [] }
async-stream = "0.3.6"

[features]
default = []
dioxus-integration = []
iced-integration = []

